--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -1,3 +1,4 @@
+//Aim-Create a class Animal with a method makeSound() that outputs a generic sound.The class should further contain derived classes Dog and Cat that override the makeSound() method to output specific sounds for each animal. Demonstrate polymorphism by creating an Animal reference that can hold objects of both Dog and Cat, and call the overridden makeSound() method at runtime.
 class Animal {
     public void makeSound() {
         System.out.println("Some generic animal sound");
@@ -29,3 +30,6 @@ public class Main {
         myAnimal.makeSound();
     }
 }
+//Woof! Woof!
+//Meow! Meow!
+
