--- a/Experiment 1.2
+++ b/Experiment 1.2
@@ -1,3 +1,5 @@
+//Write a program that takes two strings representing numbers, converts them to wrapper classes, and performs basic arithmetic operations (addition, subtraction, multiplication, division).
+
 import java.util.Scanner;
 
 public class ArithmeticOperations {
@@ -31,3 +33,10 @@ public class ArithmeticOperations {
         scanner.close();
     }
 }
+//Enter the first number: 12
+//Enter the second number: 4
+//Results:
+//Addition: 16.0
+//Subtraction: 8.0
+//Multiplication: 48.0
+//Division: 3.0
