--- a/Experiment 1.3
+++ b/Experiment 1.3
@@ -1,3 +1,4 @@
+//aim:Write a Java program to create an Employee class where an Overloaded constructor initializes employee details.The default constructor should Initialize name as //"Unknown" and salary as 0 and the second constructor initializes the name and sets a default salary.  Create a method DisplayEmployeeDetails() to display employee //information.
 class Employee {
     String name;
     double salary;
@@ -31,3 +32,10 @@ public class Main {
         emp2.DisplayEmployeeDetails();
     }
 }
+//Employee 1 Details:
+//Employee Name: Unknown
+//Employee Salary: $0.0
+
+//Employee 2 Details:
+//Employee Name: John Doe
+//Employee Salary: $5000.0
