--- a/Experiment 1.4
+++ b/Experiment 1.4
@@ -1,3 +1,6 @@
+//Aim:Design a program for a basic banking system that calculates the average account balance by dividing the total balance by the number of account holders and verifies //transaction IDs from an array. The program should demonstrate robust exception handling using multiple try-catch blocks to manage two specific scenarios: an //ArithmeticException for division by zero when there are no account holders and an ArrayIndexOutOfBoundsException for accessing invalid indices in the transaction ID array.
+
+ 
 import java.util.Scanner;
 
 public class BankingSystem {
@@ -31,3 +34,5 @@ public class BankingSystem {
         }
     }
 }
+//Enter transaction ID index to verify: 1
+//Transaction ID: TXN124
